--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "flatiron":      "~>0.1.16",
+    "handlebars":    "~>1.0.5beta",
     "mongode":       "~>0.1.3",    
     "node-neo4j":    "~>0.1.1"    
   },
