--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "flatiron":      "~>0.1.16",
     "handlebars":    "1.0.5beta",
     "mongode":       "~>0.1.3",    
-    "node-neo4j":    "~>0.1.1"    
+    "node-neo4j":    "~>0.1.1",
+    "union":         "~>0.3.0"    
   },
   "devDependencies": {
     "vows": ">=0.5.0"
